Cambios de color en el footer

--- a/css/footer.css
+++ b/css/footer.css
@@ -13,7 +13,7 @@
 }
 footer{
     color: #FFFFFF;
-    background-color: #2c2c2c;
+    background-color: #190e0e;
 }
 
  #ayuda,  #conocenos, #descarga, #siguenos {
