--- a/css/index.css
+++ b/css/index.css
@@ -139,15 +139,16 @@
 
 .aviso-cookies{
     display: none;
-    background:#fff;
+    background: #fff;
     padding: 20px;
     width: calc(100% - 40px);
     max-width: 300px;
     line-height: 150%;
     border-radius: 10px;
     position: fixed;
-    bottom: 20px;
-    left:20px;
+    bottom: 30%;
+    left: 40%;
+    /* right: 50%; */
     z-index: 100;
     padding-top: 60px;
     box-shadow: 0px 2px 20px 10px rgba(222,222,222, .25);
