--- a/css/tablas.css
+++ b/css/tablas.css
@@ -56,13 +56,14 @@ table {
 
   /*/Tabla de proteinas*/
 
+  
   /*Tabla de medicamentos*/
 #divTabla {
-    margin: auto;
+    /* margin: auto; */
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: 1200px;
+    /* max-width: 1200px; */
     padding: 45px;
     text-align: center;
 }
@@ -70,6 +71,8 @@ table {
 #divTabla form{
     margin-left: 0;
     width: 40%;
+    margin-bottom: 5%;
+
 }
 
 #divTabla h1 {
@@ -92,15 +95,31 @@ table {
 
 table{
     width: 100%;
+    border-radius: 20px;
+
 }
 
 #divTabla table, #divTabla table td , #divTabla table th{
     border: 2px solid #47B191;
-    background-color:#7FC6AF ;
-    color: #FFFFFF;
+    /* background-color:#7FC6AF ; */
+    color: #000;
     border-collapse: collapse;
+    padding: 5px 10px;
+}
+
+
+
+#divTabla table th{
+    background-color: #439A97;
+    color: #fff;
     padding: 10px;
 }
+
+table tr:nth-child(odd){
+    background-color: #97DECE;
+    
+}
+
 #divTabla > button{
     margin-top: 5%;
     background-color: #7FC6AF;
@@ -147,8 +166,38 @@ table{
 #divTabla button a{
     color: #FFFFFF;
 }
-    
 
+/* PARA LOS BOTONES DE MODIFICAR Y ACTUALIZAR DE LAS TABLAS CUANDO EL USER SE LOGEA COMO ADMINISTRADOR */
+
+#divTabla .td-btn{
+background: white;
+}
+
+.btn-mod-act
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+
+.btn-mod-act > input{
+    color: white;
+    border: 2px solid black;
+    background-color: #439A97;
+    padding: 10px 20px;
+    /* border: none; */
+    margin: 3px;
+}
+
+.btn-mod-act > .modificar{
+    background-color: blue;
+}
+
+.btn-mod-act > .eliminar{
+    background-color: red;
+}
+/*AQUI TERMINA  LOS BOTONES DE MODIFICAR Y ACTUALIZAR DE LAS TABLAS CUANDO EL USER SE LOGEA COMO ADMINISTRADOR */
 
 
   /*/Tabla de proteinas*/
