--- a/css/tablas.css
+++ b/css/tablas.css
@@ -100,11 +100,11 @@ table{
 }
 
 #divTabla table, #divTabla table td , #divTabla table th{
-    border: 2px solid #47B191;
-    /* background-color:#7FC6AF ; */
     color: #000;
-    border-collapse: collapse;
-    padding: 5px 10px;
+    border-spacing: 4px;
+    border-collapse: separate;
+    padding: 5px 0;
+    text-align: center;
 }
 
 
@@ -176,8 +176,9 @@ background: white;
 .btn-mod-act
 {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    /* flex-direction: column; */
+    padding: 0;
+    justify-content: CENTER;
 }
 
 
@@ -188,14 +189,15 @@ background: white;
     padding: 10px 20px;
     /* border: none; */
     margin: 3px;
+    width: 100%;
 }
 
 .btn-mod-act > .modificar{
-    background-color: blue;
+    background-color: #35a631;
 }
 
 .btn-mod-act > .eliminar{
-    background-color: red;
+    background-color: #ae3636;
 }
 /*AQUI TERMINA  LOS BOTONES DE MODIFICAR Y ACTUALIZAR DE LAS TABLAS CUANDO EL USER SE LOGEA COMO ADMINISTRADOR */
 
