--- a/css/header.css
+++ b/css/header.css
@@ -13,11 +13,13 @@ a{
 
 /*HEADER*/
 header{
-    position: relative;
+    position: fixed;
     background-color: #47B191;
     color: #FFFFFF;
     width: 100%;
     height: 9em;
+    z-index: 1000;
+    top: 0;
 }
 header a{
     color: #FFFFFF;
