--- a/css/headerBlue.css
+++ b/css/headerBlue.css
@@ -13,11 +13,13 @@ a{
 
 /*HEADER*/
 header{
-    position: relative;
+    /* position: relative; */
+    position: fixed;
     background-color: #79B4E3 ;
     color: #FFFFFF;
     width: 100%;
     height: 9em;
+    top: 0;
 }
 header a{
     color: #FFFFFF;
@@ -239,10 +241,11 @@ header button{
 #desplegableMedicamentos, #desplegableProteinas{
     position: absolute;
     visibility: hidden;
-    height:10em;
+    /* height: 10em; */
     width: 13.8%;
     z-index: 20;
-    background-color: #79B4E3 ;
+    background-color: #79B4E3;
+    padding: 10px;
 }
 /*MENU DESPLEGABLE DE MEDICAMENTOS*/
 /*contenedor del menu desplegable*/
