--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
 }
 /*-----------------------PUBLICIDAD111111-----------------------*/
 #publicidad22 {
-    margin-top: 10%;
+    margin-top: 130px;
     margin-bottom: 10%;
     position: relative;
 }
