--- a/css/header.css
+++ b/css/header.css
@@ -274,7 +274,8 @@ header button{
     /* margin-top: 43%;
     width: 100%; */
 
-    margin-top: 17%;
+    /* margin-top: 17%; */
+    margin: 7px 0;
     width: 100%;
 }
 
