--- a/css/headerPink.css
+++ b/css/headerPink.css
@@ -13,11 +13,12 @@ a{
 
 /*HEADER*/
 header{
-    position: relative;
+    position: fixed;
     background-color: #F18D8C;
     color: #FFFFFF;
     width: 100%;
     height: 9em;
+    top: 0%;
 }
 header a{
     color: #FFFFFF;
@@ -239,10 +240,12 @@ header button{
 #desplegableMedicamentos, #desplegableProteinas{
     position: absolute;
     visibility: hidden;
-    height:10em;
+    /* height: 10em; */
     width: 13.8%;
     z-index: 20;
     background-color: #F18D8C;
+    padding: 10px;
+    /* text-align: center;*/
 }
 /*MENU DESPLEGABLE DE MEDICAMENTOS*/
 /*contenedor del menu desplegable*/
