--- a/css/tablas.css
+++ b/css/tablas.css
@@ -9,14 +9,16 @@
     text-align: center;
 }
 
-#divTablaProteina form {
+/* #divTablaProteina form {
     margin-left: 0;
     /* width: 40%; */
-    /* margin-bottom: 5%; */
-}
+    /* margin-bottom: 5%; 
+} */
+
+/* 
 #divTablaProteina .btn_anadir{
     background-color: #000;
-}
+} */
 
 .form-buscar-user {
     border: 2px solid black;
@@ -79,9 +81,9 @@ table {
 
 
 #divTablaProteina button{
-    margin-top: 5%;
+    /*margin-top: 5%; */
     background-color: #b8d0e3;
-    border-radius: 2em;
+    border-radius: 4px;
     width: 100%;
     /* height: 2em; */
     padding: 6px;
@@ -99,12 +101,12 @@ table {
 /*----------------Tabla de medicamentos---------------*/
 
 #divTabla {
-    /* margin: auto; */
+    margin: auto;
     display: flex;
     flex-direction: column;
     width: 100%;
-    /* max-width: 1200px; */
-    padding: 45px;
+    max-width: 1200px;
+    padding: 45px 20px;
     text-align: center;
 
 }
@@ -113,9 +115,18 @@ table {
     display: flex;
     justify-content: space-between;
     margin-bottom: 5%;
+    margin-top: 30px;
 }
 
-.btn_anadir{
+#anadirButton{
+    width: 20% !important;
+    background-color: #439A97;
+    color: white;
+    border-radius: 4px;
+}
+
+
+/* .btn_anadir{
     background: #439A97;
     display: flex;
     align-items: center;
@@ -124,7 +135,7 @@ table {
     padding: 0 20px;
     color: white;
     border-radius: 4px;
-}
+} */
 
 .fa-user-plus:before {
     content: "\f234";
@@ -138,6 +149,75 @@ table {
     margin-left: 0;
     /* width: 40%; */
 
+}
+
+#divTabla #anadir
+{
+    /*width: 100%; */
+    width: 443px;
+    /* max-width: 43%; */
+    display: none;
+    /* flex-direction: column; */
+    align-items: center;
+    /* justify-items: center; */
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 55px;
+    border: 1px solid black;
+    margin: auto;
+    border-radius: 15px;
+    background-color: #D9F8F1;
+    /* flex-wrap: wrap;*/
+}
+
+
+#anadir-prote{
+    width: 443px;
+    /* max-width: 43%; */
+    display: none;
+    /* flex-direction: column; */
+    align-items: center;
+    /* justify-items: center; */
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 55px;
+    border: 1px solid black;
+    margin: auto;
+    border-radius: 15px;
+    background-color: #d0e3f6;
+}
+
+
+
+#divTabla form .anadir-usuario,
+#divTablaProteina form .anadir-usuario
+{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+}
+
+#divTabla .anadir-usuario .input-box,
+#divTablaProteina form .anadir-usuario .input-box
+{
+    width: calc(100% / 2 - 20px);
+    margin: 10px;
+    text-align: left;
+
+}
+
+.anadir-usuario .input-box input
+
+{
+    width: 100%;
+    height: 45%;
+    padding: 9px;
+    border-radius: 5px;
+    background: #97DECE;
+    border: none;
 }
 
 #divTabla h1 {
@@ -161,6 +241,7 @@ table {
 table{
     width: 100%;
     border-radius: 20px;
+    margin-top: 100px;
 
 }
 
@@ -418,11 +499,8 @@ table tr:nth-child(odd){
         display: none;
     }
     #anadir input{
-         width: 10% !important;
+         /* width: 10% !important; he comentado esto por de momento */
          display: inline; 
     }
 
 
-#anadirButton{
-    width: 20% !important;
-}
