añadidio nuevo carrito falta conectarlo con bbdd

--- a/css/admin.css
+++ b/css/admin.css
@@ -30,7 +30,7 @@
     background-color: #7FC6AF;
     /* height: 2em; */
     /* width: 100%; */
-    border-radius: 2em;
+    border-radius:7px;
     border: none;
     padding: 14px;
 }
