--- a/css/tablas.css
+++ b/css/tablas.css
@@ -268,6 +268,25 @@ table {
     align-items: center;
 }
 
+/* ESTILO PARA EL SELECT DE TIPO DE ROL */
+#divTabla  #rol{
+    width: 100%;
+    height: 45%;
+    padding: 9px;
+    border-radius: 5px;
+    background: #97DECE;
+    border: none;
+    color: #999;
+}
+
+#divTabla  #rol option{
+    color: black;
+}
+
+
+
+
+
 #divTabla .anadir-usuario .input-box,
 #divTablaProteina form .anadir-usuario .input-box
 {
