--- a/css/tablas.css
+++ b/css/tablas.css
@@ -527,11 +527,14 @@ table tr:nth-child(odd){
         display: none;
     }
 
+    #tablaModificar form td #nombreMod{
+        width: 135px;
+    }
     #tablaModificar th input{
         width: 100%;
     }
 
-
+  
 
 
 /*AQUI TERMINA  LOS BOTONES DE MODIFICAR Y ACTUALIZAR DE LAS TABLAS CUANDO EL USER SE LOGEA COMO ADMINISTRADOR */
@@ -540,7 +543,7 @@ table tr:nth-child(odd){
      /* RESPONSIVE TABLAS DE USUARIO */
 
      @media screen and (max-width:1252px){
-        table td:last-child {
+        #divTabla table td:last-child {
             padding: 10px;
             background-color: initial;
             justify-content: initial;
@@ -555,7 +558,14 @@ table tr:nth-child(odd){
             display: none;
         }
     
-
+        .clase_tbody{
+            margin-top: 30px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            grid-gap: 30px;
+            width: 100%;
+            transition: .3s;
+        }
 
         #divTabla #tabla-user td[titulo]{
             display: flex;
@@ -580,6 +590,32 @@ table tr:nth-child(odd){
         }
 
 
+    }
+
+    @media screen and (max-width:1200px){
+        
+        #tablaModificar thead{
+            display: none;
+        }
+
+        #tablaModificar tr{
+            display: flex;
+            flex-direction: column;
+        }
+
+        #tablaModificar td[titulo]{
+            display: flex;
+            padding: 10px;
+            border: 1px solid black;
+        }
+
+        #tablaModificar td[titulo]::before {
+            content: attr(titulo);
+            padding: 0 10px 0 0;
+            font-weight: bold;
+            text-transform: uppercase;
+
+        }
     }
 
 
