solucionado lo del login estilo

--- a/css/index.css
+++ b/css/index.css
@@ -531,7 +531,8 @@
     border-radius: 25px;
 
 }
- #contenedor #formulario input[type="text"]  input[type="password"]{
+ #contenedor #formulario input[type="text"],
+ #contenedor #formulario input[type="password"]{
     font-size: 100%;
     color: black;
     margin: 5px 0;
